welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: value unary_! is not a member of Int
while(!2*Biscuits = cadeorange + 1){
      ^